--- a/index.html
+++ b/index.html
@@ -303,12 +303,7 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/motivation.jpg" alt="">
               <p class="mb-5">
-                2학년 2학기 멋쟁이사자처럼 전 했었던 다른 대외활동에서 웹 페이지 제작 을 해야되는 상황이었습니다. 전공 수업시간에서도 배워 본 적이 없어서
-                너무 막연하게 생각되었습니다. 2학년 1학기에 기숙사 생활을 통해 알고 있었던 선배가 멋사 5기 대표분이었는데, 멋사 계정을 알려주며
-                루비를 배워보라고 하였습니다.<br>
-                이 때 내가 짠 10줄도 되지 않는 코드로 페이지에 버튼이 생성되는 것이 신기하였습니다. 2학년 2학기 기말고사
-                기간이어서 기말고사 후 강의를 듣고 제작을 하려고 계획 중에 5기 대표 선배로부터 멋사 6기 운영진 제의를 받았습니다. 운영진 결정 까지 정말
-                많은 고민을 하였고, 하기로 결정하여서 지금 이 자리에 서 있습니다.
+                멋쟁이사자처럼 6기 운영진.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -410,9 +405,9 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/talking.png" alt="">
               <p class="mb-5">
-                소극적인 성격 탓에 낯도 가리는 편이었고, 다른 사람들과 무엇인가를 하기 보다는 혼자 있는 시간을 좋아했습니다. 하지만 대학에 들어와 다양한 활동들을
-                하면서 성격이 변하였습니다. 같은 목표를 가진 사람들과 하나의 결과물을 위해 노력하는 것을 즐기게 되었습니다. 또한 이전에는 알지 못햇던 새로운
-                사람들과의 만남을 기대하는 제 자신이 되었습니다.
+                대학에 들어와 다양한 활동들을 하면서  
+                같은 목표를 가진 사람들과 하나의 결과물을 위해 노력하는 것을 즐기게 되었습니다. 
+                또한 이전에는 알지 못햇던 새로운 사람들과의 만남을 기대하는 제 자신이 되었습니다.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -436,11 +431,10 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/future.jpeg" alt="">
               <p class="mb-5">
-                컴퓨터공학이 나에게 맞다는 생각을 한 후부터 또 다른 고민이 시작되었습니다. IT전공에서도 다양한 분야가 있는 데,
-                <strong>어느 분야가 나에게 적합한지</strong>혼란이 왔습니다.
+                컴퓨터공학이 나에게 맞다는 생각을 한 후부터 또 다른 고민이 시작되었습니다. 
+                IT전공에서도 다양한 분야가 있는 데,<strong>어느 분야가 나에게 적합한지</strong> 혼란이 왔습니다.
                 그래서 정보보안,가상현실,웹프로그래밍,앱프로그래밍 등 강연이나 세미나를 종종 들으러 다니기 시작하였습니다.<br>
-                2학년 전공 과목으로 자바응용프로그래밍을 듣게 되었는데 흔히 사용하는 <strong>어플을 내 손으로 만들 수 있다는 것</strong>이 신기하였습니다.
-                그래서 안드로이드 앱 개발자로 정했었습니다. 하지만 지금은 멋쟁이사자처럼을 웹 프론트엔드 개발자라는 새로운 목표가 생겼습니다.
+                지금은 멋쟁이사자처럼을 통해 웹프로그래머라는 새로운 목표가 생겼습니다.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
