--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/dormitory.jpeg" alt="">
               <p class="mb-5">
-                인천에 살고 있어 학교까지 통학하면 <strong>왕복 4시간</strong>이라는 어마어마한 시간이 걸립니다.<br>
+                인천에 살고 있어 학교까지 통학하면 <strong>왕복 4시간</strong>이라는 시간이 걸립니다.<br>
                 그래서 1학년 때 부터 지금까지 기숙사에서 생활하고 있습니다.<br>
                 다양한 학과의 사람들을 만날 수 있어서 좋기도 하지만, 룸메이트와 성향이 다르면 힘든 점도 있습니다.
               </p>
@@ -380,8 +380,8 @@
               <p class="mb-5">
                 <stron>컴퓨터공학전공</stron>
                 처음에는 원하던 학과는 아니였습니다. 컴퓨터프로그래밍 과목에서 파이썬을 들으며, 전공기초 과목으로 c언어를 들으며 처음에는 수업의 내용 조차
-                벅차게 느껴졌습니다. 그래서 방학 중 실시하는 학과 멘토링 수업과 개인적으로 알고리즘 사이트에 들어가서 기초부터 하나씩 문제를 풀었었습니다.
-                그 덕에 조금씩 프로그래밍에 흥미를 가지게 되었고 지금은 이 길이 나의 길이다는 생각으로 열심히 하고 있습니다.
+                벅차게 느껴졌습니다. 그래서 방학 중 실시하는 학과 멘토링 수업을 듣게 되었고,
+                그 덕분에 조금씩 프로그래밍에 흥미를 가지게 되어서 지금은 개발자를 꿈꾸며 열심히 공부하고 있습니다.
               </p>
                <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -405,9 +405,6 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/talking.png" alt="">
               <p class="mb-5">
-                대학에 들어와 다양한 활동들을 하면서  
-                같은 목표를 가진 사람들과 하나의 결과물을 위해 노력하는 것을 즐기게 되었습니다. 
-                또한 이전에는 알지 못햇던 새로운 사람들과의 만남을 기대하는 제 자신이 되었습니다.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -431,10 +428,6 @@
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/future.jpeg" alt="">
               <p class="mb-5">
-                컴퓨터공학이 나에게 맞다는 생각을 한 후부터 또 다른 고민이 시작되었습니다. 
-                IT전공에서도 다양한 분야가 있는 데,<strong>어느 분야가 나에게 적합한지</strong> 혼란이 왔습니다.
-                그래서 정보보안,가상현실,웹프로그래밍,앱프로그래밍 등 강연이나 세미나를 종종 들으러 다니기 시작하였습니다.<br>
-                지금은 멋쟁이사자처럼을 통해 웹프로그래머라는 새로운 목표가 생겼습니다.
               </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
